# odds_portal

./: .env  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  tests.py
package/: __init__.py
package/database/: __init__.py
package/odd_bot/: __init__.py  core.py  greet.py  helpers.py  inline_handlers.py  keyboard.py  set_handlers.py  states.py  texts.py
package/parsers/: helpers.py  kush_parser.py  main_parser.py
